Completed basic routes for backend and setup SQL

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -15,7 +15,7 @@
 </div>
 
 <div id="links">
-  <a href="">Link 1</a>
-  <a href="">Link 2</a>
-  <a href="">Link 2</a>
+  <a href="/">Home</a>
+  <a href="/start">Take quiz</a>
+  <a href="/scores">Highscores</a>
 </div>
