made changes to nav and updated readme

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -14,8 +14,10 @@
   </div>
 </div>
 
-<div id="links">
-  <a href="/">Home</a>
-  <a href="/start">Take quiz</a>
-  <a href="/scores">Highscores</a>
+<div id="link-box">
+  <div id="links">
+    <a href="/">Home</a>
+    <a href="/start">Take Quiz</a>
+    <a href="/scores">High Scores</a>
+  </div>
 </div>
