--- a/views/pages/username.ejs
+++ b/views/pages/username.ejs
@@ -1,19 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
+
 <body>
-    <%- include('../layout/header.ejs') %>
+  <%- include('../layout/header.ejs') %>
   <h1>Please enter your username</h1>
-    <form action="/save-username" method="POST">
-      <fieldset>
-        <legend>Username:</legend>
-        <input type="text" name="username" placeholder="enter username" required>
-      </fieldset>
-    </form>
+  <form action="/save-username" method="POST">
+    <fieldset>
+      <legend>Username:</legend>
+      <input type="text" name="username" placeholder="enter username" required>
+    </fieldset>
+  </form>
 </body>
+<script src="js/app.js"></script>
+
 </html>
