--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,3 +1,5 @@
+<link href="/styles/nav.css" type="text/css" rel="stylesheet" />
+
 <div id="sabers">
   <div id="yoda">
     <div class="plasma" id="yoda-plasma"></div>
@@ -17,7 +19,7 @@
 <div id="link-box">
   <div id="links">
     <a href="/">Home</a>
-    <a href="/start">Take Quiz</a>
+    <a href="/aboutus">About Us</a>
     <a href="/scores">High Scores</a>
   </div>
 </div>
