--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/base.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/layout.css" type="text/css" rel="stylesheet" />
   <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
@@ -14,9 +16,10 @@
 
 <body>
   <%- include('../layout/header.ejs') %>
+  <%- include('../pages/username.ejs') %>
   <h1>Index</h1>
 
 </body>
-<script src="js/app.js"></script>
+<script src="../../public/js/app.js"></script>
 
 </html>
