--- a/views/pages/username.ejs
+++ b/views/pages/username.ejs
@@ -13,14 +13,15 @@
 </head>
 
 <body>
-  <%- include('../layout/header.ejs') %>
-  <h1>Please enter your username</h1>
-  <form action="/save-username" method="POST">
+  <div id="form_container">
+  <h1 id="form_username">Please enter your username</h1>
+  <form id="form_input" action="/save-username" method="POST">
     <fieldset>
-      <legend>Username:</legend>
-      <input type="text" name="username" placeholder="enter username" required>
+      <legend id ="form_legend"></legend>
+      <input id ="form_input" type="text" name="username" placeholder="enter username" required>
     </fieldset>
   </form>
+  </div>
 </body>
 <script src="js/app.js"></script>
 
