--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -19,5 +19,6 @@
 
 
 <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
-<script src="../js/simon.js"></script>
-<script src="../../js/app.js"></script>
+<script src="js/app.js"></script>
+<script src="js/simon.js"></script>
+
