--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -1,6 +1,9 @@
-<link href="./styles/digital.css" rel="stylesheet">
-<link rel="stylesheet" href="./styles/simon.css">
-<link rel="stylesheet" href="./styles/modules.css">
+<link href="/styles/reset.css" type="text/css" rel="stylesheet" />
+<link href="/styles/nav.css" type="text/css" rel="stylesheet" />
+<link href="styles/modules.css" type="text/css" rel="stylesheet" />
+<link href="styles/digital.css" type="text/css" rel="stylesheet" />
+<link href="styles/simon.css" type="text/css" rel="stylesheet" />
+<link href="styles/timer.css" type="text/css" rel="stylesheet" />
 
 
 <div class="simon_container">
@@ -15,9 +18,12 @@
 </div>
 
 <div class="share_button_container">
-  <button class="share_button" id="share_facebook" data-sharer="facebook" data-hashtag="hashtag" data-url="https://ellisonleao.github.io/sharer.js/">Share on Facebook</button>
-  <button class="share_button" id="share_whatsapp" data-sharer="whatsapp" data-title="Checkout Sharer.js!" data-url="https://ellisonleao.github.io/sharer.js/">Share on Whatsapp</button>
-  <button class="share_button" id="share_twitter" data-sharer="twitter" data-title="Checkout Sharer.js!" data-hashtags="awesome, sharer.js" data-url="https://ellisonleao.github.io/sharer.js/">Share on Twitter</button>
+  <button class="share_button" id="share_facebook" data-sharer="facebook" data-hashtag="hashtag"
+    data-url="https://ellisonleao.github.io/sharer.js/">Share on Facebook</button>
+  <button class="share_button" id="share_whatsapp" data-sharer="whatsapp" data-title="Checkout Sharer.js!"
+    data-url="https://ellisonleao.github.io/sharer.js/">Share on Whatsapp</button>
+  <button class="share_button" id="share_twitter" data-sharer="twitter" data-title="Checkout Sharer.js!"
+    data-hashtags="awesome, sharer.js" data-url="https://ellisonleao.github.io/sharer.js/">Share on Twitter</button>
 </div>
 
 <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
