--- a/views/pages/username.ejs
+++ b/views/pages/username.ejs
@@ -7,20 +7,28 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
   <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/modules.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/digital.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/simon.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/timer.css" type="text/css" rel="stylesheet" />
+  <link href="/styles/layout.css" type="text/css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
+<header> <%- include('../layout/header.ejs') %></header>
 
 <body>
-  <%- include('../layout/header.ejs') %>
-  <h1>Please enter your username</h1>
-  <form action="/save-username" method="POST">
-    <fieldset>
-      <legend>Username:</legend>
-      <input type="text" name="username" placeholder="enter username" required>
-    </fieldset>
-  </form>
+
+  <div class="center-box">
+    <h1>Please enter your username</h1>
+    <form action="/save-username" method="POST">
+      <fieldset>
+        <legend>Username:</legend>
+        <input type="text" name="username" placeholder="enter username" required>
+      </fieldset>
+    </form>
+  </div>
 </body>
 <script src="js/app.js"></script>
 
