--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -17,8 +17,8 @@
   </div>
 </div>
 
-
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
-<script src="js/app.js"></script>
-<script src="js/simon.js"></script>
-
+<script src="../js/simon.js"></script>
+<script src="../js/app.js"></script>
