--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -14,14 +14,14 @@ z-index: -1;
 #sabers {
   display: flex; 
    flex-direction: column;
-  justify-content: flex-end;
-  margin-right: 25px;
+  /* justify-content: flex-end; */
+  margin-right: 120px;
  
 }
 
 #yoda, #vader, #obi {
   display: flex;
-  justify-content: flex-end
+  /* justify-content: flex-end */
 }
 
 .plasma {
@@ -51,11 +51,9 @@ z-index: -1;
 #vader {
   display: flex;
   flex-direction: row-reverse;
-  justify-content: flex-start;
+  justify-content: flex-end;
   
 }
-
-
 
 #obi-plasma, #vader-plasma, #yoda-plasma {
   background: rgb(255, 255, 255);
@@ -64,7 +62,6 @@ z-index: -1;
 
 #link-box {
   display: flex;
-  justify-content: flex-end;
   margin-top: 25px;
  
 }
