--- a/public/styles/simon.css
+++ b/public/styles/simon.css
@@ -1,6 +1,6 @@
-body {
+/* body {
   background-color: rgb(29, 29, 29);
-}
+} */
 
 /* This contains the simon game container */
 .simon_container {
