--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -2,5 +2,7 @@
 <script src="../../public/js/simon.js"></script>
 <script src="../../public/js/app.js"></script>
 <script src="../../public/js/timer.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
 </html>
