--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -11,6 +11,7 @@
   <link href="styles/digital.css" type="text/css" rel="stylesheet" />
   <link href="styles/simon.css" type="text/css" rel="stylesheet" />
   <link href="styles/timer.css" type="text/css" rel="stylesheet" />
+  <link href="styles/layout.css" type="text/css" rel="stylesheet" />
   <script src="https://code.jquery.com/jquery-3.4.1.min.js"
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <title>Document</title>
