--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -18,18 +18,13 @@
     integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
-<header><%- include('../layout/header.ejs') %></header>
+
 
 <body>
-<<<<<<< HEAD
-
-=======
-  <%- include('../layout/header.ejs') %>
   <%- include('../pages/username.ejs') %>
->>>>>>> c81fa87530d0022821d0b9b744545eb9c562e5f2
-  <h1>Index</h1>
 
 </body>
 <script src="../../public/js/app.js"></script>
+<script src="js/app.js"></script>
 
 </html>
