--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -1,32 +1,29 @@
-<<<<<<< HEAD
 <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
 <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
 <link href="styles/modules.css" type="text/css" rel="stylesheet" />
 <link href="styles/digital.css" type="text/css" rel="stylesheet" />
 <link href="styles/simon.css" type="text/css" rel="stylesheet" />
 <link href="styles/timer.css" type="text/css" rel="stylesheet" />
-=======
 <link href="./styles/digital.css" rel="stylesheet">
-<link rel="stylesheet" href="./styles/simon.css">
-<link rel="stylesheet" href="./styles/modules.css">
-<link rel="stylesheet" href="./styles/nav.css">
+<link href="styles/layout.css" type="text/css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-<%- include('../layout/header.ejs') %>
->>>>>>> c81fa87530d0022821d0b9b744545eb9c562e5f2
+<header><%- include('../layout/header.ejs') %></header>
 
-
-<div class="simon_container">
-  <div class="simon_button" id="simon_top_left"></div>
-  <div class="simon_button" id="simon_top_right"></div>
-  <div class="simon_button" id="simon_bottom_left"></div>
-  <div class="simon_button" id="simon_bottom_right"></div>
-  <div class="simon_center">
-    <div id="simon_points">0000</div>
-    <div id="simon_start_button"></div>
+<div id="simon-flex">
+  <div class="simon_container">
+    <div class="simon_button" id="simon_top_left"></div>
+    <div class="simon_button" id="simon_top_right"></div>
+    <div class="simon_button" id="simon_bottom_left"></div>
+    <div class="simon_button" id="simon_bottom_right"></div>
+    <div class="simon_center">
+      <div id="simon_points">0000</div>
+      <div id="simon_start_button"></div>
+    </div>
   </div>
 </div>
 
-<<<<<<< HEAD
 <div class="share_button_container">
   <button class="share_button" id="share_facebook" data-sharer="facebook" data-hashtag="hashtag"
     data-url="https://ellisonleao.github.io/sharer.js/">Share on Facebook</button>
@@ -36,12 +33,8 @@
     data-hashtags="awesome, sharer.js" data-url="https://ellisonleao.github.io/sharer.js/">Share on Twitter</button>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
-<script src="../js/simon.js"></script>
-=======
 
 <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
-<script src="js/app.js"></script>
+
 <script src="js/simon.js"></script>
-
->>>>>>> c81fa87530d0022821d0b9b744545eb9c562e5f2
+<script src="js/app.js"></script>
