--- a/views/pages/trivia.ejs
+++ b/views/pages/trivia.ejs
@@ -22,6 +22,24 @@
 
 <body>
 
+  <h1>Index</h1>
+  <%- include('../pages/timer.ejs') %>
+
+  <p id="demo"></p>
+  <br>
+  <br>
+  <h2>Number of questions left: <%= (21 - recentQuestion.length) %></h2>
+  <form action="/submit" method="POST">
+    <fieldset>
+      <legend><%= questionData %></legend>
+      <% if (dummyData.questionType === 'boolean') { %>
+      <%- include('../layout/questionBoolean') %>
+      <% } else { %>
+      <%- include('../layout/questionMultiple') %>
+      <% } %>
+    </fieldset>
+  </form>
+
   <h2 id="question-title">Number of questions left: <%= (21 - recentQuestion.length) %></h2>
   <div id="trivia-box">
     <form action="/submit" method="POST">
