username is saved, simon is in the db, universal addscores added to server.js

--- a/views/pages/gamepage.ejs
+++ b/views/pages/gamepage.ejs
@@ -24,6 +24,8 @@
     <button>Simon</button>
   </form>
 </div>
-<script src="js/app.js"></script>
+<script lang="javascript">
+  window.localStorage.setItem('username', '<%= username %>');
+</script>
 
 </html>
