--- a/views/pages/username.ejs
+++ b/views/pages/username.ejs
@@ -1,27 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/modules.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/digital.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/simon.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/timer.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/layout.css" type="text/css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <title>Document</title>
-</head>
 <header><%- include('../layout/header.ejs') %></header>
 
 <body>
   <div id="form_container">
     <h1 id="form_username">Please enter your username</h1>
-    <form id="form_input" action="/save-username" method="GET">
+    <form id="form_input" action="/gamepage" method="GET">
       <fieldset>
         <legend id="form_legend"></legend>
         <input id="form_input" type="text" name="username" placeholder="enter username" required>
@@ -30,5 +12,3 @@
   </div>
 </body>
 <script src="js/app.js"></script>
-
-</html>
