added css styling

--- a/views/pages/gamepage.ejs
+++ b/views/pages/gamepage.ejs
@@ -17,11 +17,11 @@
 <header><%- include('../layout/header.ejs') %></header>
 <div id="choose-game">
   <form id="triva_link" class="form1" action="/triva" method="get">
-    <button>Trivia</button>
+    <button class="button">Trivia</button>
   </form>
 
   <form id="triva_link" class="form1" action="/simon" method="get">
-    <button>Simon</button>
+    <button class="button">Simon</button>
   </form>
 </div>
 <script lang="javascript">
