--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -1,10 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css?family=Assistant&display=swap');
 
 body {
-  /* background-image: url('../img/starry2.jpg'); */
-  background: white;
+  background-image: url('../img/starry.jpg');
+  font-family: 'Assistant', sans-serif;
   background-repeat: no-repeat;
-  color: black;
+  color: white;
   width: 375px;
 
 }
@@ -14,36 +14,52 @@ body {
   justify-content: center;
   width: 100%;
   margin-top: 100px;
-  padding-left: 20px;
-  padding-right: 20px;
+  padding: 20px 20px;
+  font-size: 24px;
+  background: rgba(0, 0, 0, 0.358);
+  
  
 }
 
 #trivia-box form {
   justify-content: center;
+  
 }
 
 #trivia-answers {
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
+
+#trivia-answers button {
+  color: white;
+  font-size: 20px;
+  padding: 1.1em;
+  background: rgba(250, 250, 254, 0);
+  border-style: none;
+}
+
 
 #question-title {
   text-align: center;
   width: 100%;
-  margin-top: 100px;
+  margin-top: 70px;
+  padding: 20px 20px;
+  font-size: 24px;
+  background: rgba(0, 0, 0, 0.358);
 }
 
 #form_container {
-  display: flex;
-  justify-content: center;
+  flex-direction: column;
   margin-top: 50px;
   width: 100%;
-/* margin-left: 20px; */
+  text-align: center;
 }
 
 #form_container h1 {
   margin-right: 15px;
+  margin-bottom: 1.4em;
 
 }
 
@@ -65,11 +81,20 @@ body {
   margin-bottom: 50px;
 }
 
+#timer_container {
+  z-index: -1;
+  margin-top: 2em;
+}
+
+#timer-outer {
+  width: 100%;
+}
+
 @media (min-width: 768px) and (max-width: 960px){
   
   body {
     width: 768px;
-    background: white;
+    background-image: url('../img/starry.jpg');
     background-size: cover;                  
     background-repeat: no-repeat;
     margin: auto;
@@ -89,7 +114,7 @@ body {
 
   body {
     width: 960px;
-    background: white;
+    background-image: url('../img/starry.jpg');
     background-size: cover;                  
     background-repeat: no-repeat;
     margin: auto;
