--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -1,3 +1,13 @@
+
+@import url('https://fonts.googleapis.com/css?family=Assistant&display=swap');
+
+
+#form_username {
+  font-family: 'Assistant', sans-serif;
+  font-size: 24px;
+}
+
+
 .share_button_container{
   display: block;
   margin: 0px auto;
@@ -31,12 +41,12 @@
   background-image: linear-gradient(to bottom, #BDC7F6, #84A0E3);
   
   -moz-border-radius: 20px;
-  border-radius: 20px;
+  border-radius: 10px;
   color: #FFFFFF;
   font-family: Open Sans;
   font-size: 40px;
-  font-weight: 100;
-  padding: 40px;
+  font-weight: 2em;
+  padding: 10px;
   box-shadow: 0px 1px 31px 0px #0059A0;
   -webkit-box-shadow: 0px 1px 31px 0px #0059A0;
   -moz-box-shadow: 0px 1px 31px 0px #0059A0;
@@ -54,7 +64,7 @@
   background-image: -ms-linear-gradient(top, #1E62D0, #3D94F6);
   background-image: -o-linear-gradient(top, #1E62D0, #3D94F6);
   background-image: linear-gradient(to bottom, #1E62D0, #3D94F6);
-  ext-decoration: none;
+  text-decoration: none;
   }
 
 
