--- a/views/pages/timer.ejs
+++ b/views/pages/timer.ejs
@@ -1,9 +1,11 @@
-<div id="timer_container" class="timer_container">
-  <div class="timer_hilt">
-    <img src="/img/timer_hilt.png" alt="hilt of lightsaber">
-  </div>
-  <div class="timer_blade">
-    <div class="timer_blade_outline"></div>
-    <div class="timer_blade_actual"></div>
+<div id="timer-outer">
+  <div id="timer_container" class="timer_container">
+    <div class="timer_hilt">
+      <img src="/img/timer_hilt.png" alt="hilt of lightsaber">
+    </div>
+    <div class="timer_blade">
+      <div class="timer_blade_outline"></div>
+      <div class="timer_blade_actual"></div>
+    </div>
   </div>
 </div>
