Corrected ejs files

--- a/views/layout/header.ejs
+++ b/views/layout/header.ejs
@@ -1,28 +1,25 @@
-<link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-<div id="sabers">
-  <div id="yoda">
-    <div class="plasma" id="yoda-plasma"></div>
-    <div class="hilt"></div>
+<header>
+  <div id="sabers">
+    <div id="yoda">
+      <div class="plasma" id="yoda-plasma"></div>
+      <div class="hilt"></div>
+    </div>
+
+    <div id="vader">
+      <div class="plasma" id="vader-plasma"></div>
+      <div class="hilt"></div>
+    </div>
+    <div id="obi">
+      <div class="plasma" id="obi-plasma"></div>
+      <div class="hilt"></div>
+    </div>
   </div>
 
-  <div id="vader">
-    <div class="plasma" id="vader-plasma"></div>
-    <div class="hilt"></div>
+  <div id="link-box">
+    <div id="links">
+      <a href="/">Home</a>
+      <a href="/aboutus">About Us</a>
+      <a href="/scores">High Scores</a>
+    </div>
   </div>
-  <div id="obi">
-    <div class="plasma" id="obi-plasma"></div>
-    <div class="hilt"></div>
-  </div>
-</div>
-
-<div id="link-box">
-  <div id="links">
-    <a href="/">Home</a>
-    <a href="/aboutus">About Us</a>
-    <a href="/scores">High Scores</a>
-  </div>
-</div>
-
-<script src="js/app.js"></script>
+</header>
