--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -1,8 +1,1 @@
-<script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
-<script src="../../public/js/simon.js"></script>
-<script src="../../public/js/app.js"></script>
-<script src="../../public/js/timer.js"></script>
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-</html>
+<script src="js/app.js"></script>
