--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -1,27 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-  <link href="styles/modules.css" type="text/css" rel="stylesheet" />
-  <link href="styles/digital.css" type="text/css" rel="stylesheet" />
-  <link href="styles/simon.css" type="text/css" rel="stylesheet" />
-  <link href="styles/timer.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/layout.css" type="text/css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<%- include('../layout/head.ejs') %>
+<%- include('../layout/css.ejs') %>
   <title>Document</title>
 </head>
-<header> <%- include('../layout/header.ejs') %></header>
-
 <body>
+  <%- include('../layout/header.ejs') %>
 
 
+    <!--Things-->
+
+
+  <%- include('../layout/footer.ejs') %>
 </body>
-<script src="js/app.js"></script>
-
 </html>
