--- a/views/pages/error.ejs
+++ b/views/pages/error.ejs
@@ -1,26 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-  <link href="styles/modules.css" type="text/css" rel="stylesheet" />
-  <link href="styles/digital.css" type="text/css" rel="stylesheet" />
-  <link href="styles/simon.css" type="text/css" rel="stylesheet" />
-  <link href="styles/timer.css" type="text/css" rel="stylesheet" />
-  <link href="styles/layout.css" type="text/css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-  <title>Document</title>
+<%- include('../layout/head.ejs') %>
+<%- include('../layout/css.ejs') %>
+  <title>404</title>
 </head>
-<header><%- include('../layout/header.ejs') %></header>
-
 <body>
-  <h1>Error</h1>
-</body>
-<script src="js/app.js"></script>
+    <%- include('../layout/header.ejs') %>
 
+
+  <h1>This is not the page you are looking for....</h1>
+
+
+  <%- include('../layout/footer.ejs') %>
+</body>
 </html>
