--- a/views/pages/gamepage.ejs
+++ b/views/pages/gamepage.ejs
@@ -1,31 +1,22 @@
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/base.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/layout.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-  <link href="styles/modules.css" type="text/css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<%- include('../layout/head.ejs') %>
+<%- include('../layout/css.ejs') %>
   <title>Document</title>
 </head>
+<body>
+  <%- include('../layout/header.ejs') %>
 
-<header><%- include('../layout/header.ejs') %></header>
-<div id="choose-game">
-  <form id="triva_link" class="form1" action="/triva" method="get">
-    <button>Trivia</button>
-  </form>
 
-  <form id="triva_link" class="form1" action="/simon" method="get">
-    <button>Simon</button>
-  </form>
-</div>
-<script lang="javascript">
-  window.localStorage.setItem('username', '<%= username %>');
-</script>
+  <div id="choose-game">
+    <form id="triva_link" class="form1" action="/triva" method="get">
+      <button>Trivia</button>
+    </form>
 
+    <form id="triva_link" class="form1" action="/simon" method="get">
+      <button>Simon</button>
+    </form>
+  </div>
+
+  
+  <%- include('../layout/footer.ejs') %>
+</body>
 </html>
