--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -1,30 +1,29 @@
-<link href="/styles/reset.css" type="text/css" rel="stylesheet" />
-<link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-<link href="styles/modules.css" type="text/css" rel="stylesheet" />
+<%- include('../layout/head.ejs') %>
+<%- include('../layout/css.ejs') %>
 <link href="styles/digital.css" type="text/css" rel="stylesheet" />
 <link href="styles/simon.css" type="text/css" rel="stylesheet" />
-<link href="styles/timer.css" type="text/css" rel="stylesheet" />
-<link href="./styles/digital.css" rel="stylesheet">
-<link href="styles/layout.css" type="text/css" rel="stylesheet" />
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"
-  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <title>Document</title>
+</head>
+<body>
+  <%- include('../layout/header.ejs') %>
+  
 
-<header><%- include('../layout/header.ejs') %></header>
-
-<div id="simon-flex">
-  <div class="simon_container">
-    <div class="simon_button" id="simon_top_left"></div>
-    <div class="simon_button" id="simon_top_right"></div>
-    <div class="simon_button" id="simon_bottom_left"></div>
-    <div class="simon_button" id="simon_bottom_right"></div>
-    <div class="simon_center">
-      <div id="simon_points">0000</div>
-      <div id="simon_start_button"></div>
+  <div id="simon-flex">
+    <div class="simon_container">
+      <div class="simon_button" id="simon_top_left"></div>
+      <div class="simon_button" id="simon_top_right"></div>
+      <div class="simon_button" id="simon_bottom_left"></div>
+      <div class="simon_button" id="simon_bottom_right"></div>
+      <div class="simon_center">
+        <div id="simon_points">0000</div>
+        <div id="simon_start_button"></div>
+      </div>
     </div>
   </div>
-</div>
+  
 
-<script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
-
-<script src="js/simon.js"></script>
-<script src="js/app.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
+  <script src="js/simon.js"></script>
+  <%- include('../layout/footer.ejs') %>
+</body>
+<html>
