--- a/views/pages/trivia.ejs
+++ b/views/pages/trivia.ejs
@@ -1,44 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="/styles/reset.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-  <link href="styles/modules.css" type="text/css" rel="stylesheet" />
-  <link href="styles/digital.css" type="text/css" rel="stylesheet" />
-  <link href="styles/simon.css" type="text/css" rel="stylesheet" />
-  <link href="styles/timer.css" type="text/css" rel="stylesheet" />
-  <link href="/styles/layout.css" type="text/css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-
-
+<%- include('../layout/head.ejs') %>
+<%- include('../layout/css.ejs') %>
+<link href="styles/timer.css" type="text/css" rel="stylesheet" />
   <title>Trivia</title>
 </head>
-<header><%- include('../layout/header.ejs') %></header>
-
 <body>
+  <%- include('../layout/header.ejs') %>
+  <%- include('../layout/timer.ejs') %>
 
-  <h1>Index</h1>
-  <%- include('../pages/timer.ejs') %>
-
-  <p id="demo"></p>
-  <br>
-  <br>
-  <h2>Number of questions left: <%= (21 - recentQuestion.length) %></h2>
-  <form action="/submit" method="POST">
-    <fieldset>
-      <legend><%= questionData %></legend>
-      <% if (dummyData.questionType === 'boolean') { %>
-      <%- include('../layout/questionBoolean') %>
-      <% } else { %>
-      <%- include('../layout/questionMultiple') %>
-      <% } %>
-    </fieldset>
-  </form>
 
   <h2 id="question-title">Number of questions left: <%= (21 - recentQuestion.length) %></h2>
   <div id="trivia-box">
@@ -55,8 +23,9 @@
       </fieldset>
     </form>
   </div>
-</body>
-<script src="js/app.js"></script>
-<script src="js/timer.js"></script>
 
+
+  <%- include('../layout/footer.ejs') %>
+  <script src="js/timer.js"></script>
+</body>
 </html>
