--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -73,24 +73,24 @@ body {
   margin: 25px;
 }
 
-#simon-flex {
+/* #simon-flex {
   display: flex;
   justify-content: center;
-  width: 100%;
-  text-align: center;
-  margin-bottom: 50px;
+  width: 100%; */
+  /* text-align: center;
+  margin-bottom: 50px; */
 }
-
+/* 
 #timer_container {
   z-index: -1;
   margin-top: 2em;
-}
+} */
 
-#timer-outer {
+/* #timer-outer {
   width: 100%;
-}
+} */
 
-@media (min-width: 768px) and (max-width: 960px){
+@media (min-width: 769px) and (max-width: 960px){
   
   body {
     width: 768px;
