--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -2,11 +2,11 @@
 <%- include('../layout/css.ejs') %>
 <link href="styles/digital.css" type="text/css" rel="stylesheet" />
 <link href="styles/simon.css" type="text/css" rel="stylesheet" />
-  <title>Document</title>
+<title>Document</title>
 </head>
+
 <body>
   <%- include('../layout/header.ejs') %>
-  
 
   <div id="simon-flex">
     <div class="simon_container">
@@ -20,8 +20,9 @@
       </div>
     </div>
   </div>
-  
 
+  <img id="leia-full-body" src="/img/leia_full_body.png" />
+  <h1 class="main-header">Leia Says</h1>
   <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
   <script src="js/simon.js"></script>
   <%- include('../layout/footer.ejs') %>
