--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -1,14 +1,16 @@
 <%- include('../layout/head.ejs') %>
 <%- include('../layout/css.ejs') %>
-  <title>Document</title>
+<title>Document</title>
 </head>
+
 <body>
   <%- include('../layout/header.ejs') %>
 
-
-    <!--Things-->
+  <h1 class="main-header">About Us</h1>
+  <!--Things-->
 
 
   <%- include('../layout/footer.ejs') %>
 </body>
+
 </html>
