--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,17 +1,20 @@
 <%- include('../layout/head.ejs') %>
 <%- include('../layout/css.ejs') %>
-  <title>Document</title>
-  <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js"
-    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+<title>Document</title>
+<link href="/styles/nav.css" type="text/css" rel="stylesheet" />
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 </head>
+
 <body>
 
 
   <%- include('../layout/header.ejs') %>
+  <h1 class="main-header">Star Wars Games</h1>
   <%- include('../layout/username.ejs') %>
+  <div id="group-container">
+    <img id="group-photo" src="/img/luke_leia_yoda.png" />
+  </div>
+  <%- include('../layout/footer.ejs') %> </body>
 
-
-  <%- include('../layout/footer.ejs') %>
-</body>
 </html>
