--- a/views/pages/board.ejs
+++ b/views/pages/board.ejs
@@ -1,10 +1,30 @@
 
-<link rel="stylesheet" type="text/css" href="./styles/four_in_a_row.css" />
+<%- include('../layout/head.ejs') %>
+<%- include('../layout/css.ejs') %>
 
-<div class="centerx">
-  <div id="four_in_a_row_container">
+<link href="styles/board.css" type="text/css" rel="stylesheet" />
+
+<title>Document</title>
+
+<body>
+  <%- include('../layout/header.ejs') %>
+
+
+  <div class="centerx">
+    <div id="four_in_a_row_container">
     <table id="four_in_a_row_grid" cellspacing=5 cellpadding=0></table>
-  </div>
-</div>
+    </div>
 
-<script type="text/javascript" src="./js/four_in_a_row.js"></script>
+    <div id="leaderboard">
+      <p id="leaderboardMessage"></p>
+      <a href="/"><button id="goToLeaderboard">Home</button></a>
+    </div>
+
+    <img id="imageSlideInYoda" src="../img/yode_full_body.png" alt="Yoda" title="Yoda"></img>
+
+  </div>
+
+
+<script src="js/board.js"></script>
+<%- include('../layout/footer.ejs') %>
+</body>
