added error page and about us

--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -7,7 +7,44 @@
   <%- include('../layout/header.ejs') %>
 
   <h1 class="main-header">About Us</h1>
-  <!--Things-->
+  <div id="all-about-us">
+    <div class="about-us">
+      <img src="https://via.placeholder.com/250">
+      <h3 class="about-name">Sarah Gilliam</h3>
+      <p>Lucas ipsum dolor sit amet mara darth qui-gon wedge skywalker solo kenobi hutt dooku endor. Moff mace ponda
+        baba.
+        Han hutt mustafar mandalore. Jabba jinn fett hutt r2-d2 dagobah bothan alderaan. Moff utapau utapau grievous
+        dantooine.</p>
+
+    </div>
+    <div class="about-us">
+      <img src="https://via.placeholder.com/250">
+      <h3 class="about-name">Adrian Huebner</h3>
+      <p>Lucas ipsum dolor sit amet mara darth qui-gon wedge skywalker solo kenobi hutt dooku endor. Moff mace ponda
+        baba.
+        Han hutt mustafar mandalore. Jabba jinn fett hutt r2-d2 dagobah bothan alderaan. Moff utapau utapau grievous
+        dantooine.</p>
+
+    </div>
+    <div class="about-us">
+      <img src="https://via.placeholder.com/250">
+      <h3 class="about-name">Jon Veach</h3>
+      <p>Lucas ipsum dolor sit amet mara darth qui-gon wedge skywalker solo kenobi hutt dooku endor. Moff mace ponda
+        baba.
+        Han hutt mustafar mandalore. Jabba jinn fett hutt r2-d2 dagobah bothan alderaan. Moff utapau utapau grievous
+        dantooine.</p>
+
+    </div>
+    <div class="about-us">
+      <img src="/img/susanna.jpg">
+      <h3 class="about-name">Susanna Lakey</h3>
+      <p>Susanna spent the last 5 years working and volunteering in animal shelters. She is pursuing a career in
+        Software Development for the potential for growth and learning. Susanna enjoys spending time with her husband
+        and 3 cats, playing board games, and practicing yoga.
+      </p>
+
+    </div>
+  </div>
 
 
   <%- include('../layout/footer.ejs') %>
