--- a/views/pages/gamepage.ejs
+++ b/views/pages/gamepage.ejs
@@ -14,10 +14,16 @@
         <button class="button">Yoda's Trivia</button>
       </form>
     </div>
-    <div>
+    <div id="leia-trivia-option">
       <img id="leia-head" src="/img/leia_head_shot.png" />
       <form id="triva_link" class="form1" action="/simon" method="get">
         <button class="button">Leia Says</button>
+      </form>
+    </div>
+    <div id="luke-trivia-option">
+      <img id="luke-head" src="/img/luke_head_shot.png" />
+      <form id="triva_link" class="form1" action="/simon" method="get">
+        <button class="button">Luke Strikes Back</button>
       </form>
     </div>
   </div>
