--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -22,7 +22,7 @@
   </div>
 
   <img id="leia-full-body" src="/img/leia_full_body.png" />
-  <h1 class="main-header">Leia Says</h1>
+  <h1 class="main-header" id="leia-header">Leia Says</h1>
   <script src="https://cdn.jsdelivr.net/npm/sharer.js@latest/sharer.min.js"></script>
   <script src="js/simon.js"></script>
   <%- include('../layout/footer.ejs') %>
