--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -6,8 +6,15 @@
 
 .main-header {
   font-family: 'Bangers', cursive;
-  font-size: 80px;
+  font-size: 100px;
   text-align: center;
+  color: rgb(237, 237, 12);
+}
+
+.about-name {
+  font-family: 'Bangers', cursive;
+  font-size: 40px;
+   color: rgb(237, 237, 12);
 }
 
 #group-photo {
@@ -15,20 +22,36 @@
   margin-top: 8em;
 }
 
-#yoga-trivia-img {
+#yoda-trivia-img {
   margin-top: 4em;
+  float: left;
 }
 
 #leia-head {
-  width: 60%;
+  width: 53%;
 }
 
 #yoda-head {
   width: 70%;
 }
 
-#yoda-trivia-option {
-  /* text-align: baseline; */
+#luke-head {
+  width: 50%;
+}
+
+
+#luke-trivia-option {
+  text-align: center;
+  margin-right: 9em;
+}
+
+#leia-trivia-option {
+margin-bottom: 50px;
+}
+
+#trivia-header, #leia-header  {
+  margin-top: 100px;
+  font-size: 150px;
 }
 
 #group-container {
@@ -42,6 +65,7 @@
 
 #leia-full-body {
   height: 500px;
+  float: left
 }
 
 #form_input {
@@ -73,6 +97,248 @@
   background-color: rgb(93, 128, 245);
 }
 
+#yoda-error-box {
+  
+}
+
+#yoda-error {
+  animation-name: floatYoda;
+ animation-duration: 60s;
+ animation-iteration-count: infinite;
+ animation-direction: alternate;
+  width: 25%;
+  margin-top: 15em;
+  margin-left: 15em;
+  margin-bottom: 5em;
+}
+
+#leia-error {
+  width: 20%;
+  animation-name: floatLeia;
+ animation-duration: 60s;
+ animation-iteration-count: infinite;
+ animation-direction: alternate;
+ margin-left: 10em;
+ margin-bottom: 100px;
+}
+
+#luke-error {
+  width: 20%;
+  float: left;
+  animation-name: floatLuke;
+ animation-duration: 60s;
+ animation-iteration-count: infinite;
+ animation-direction: alternate;
+ margin-left: 10em;
+}
+
+@keyframes floatYoda{
+  0% {
+    top: 0px;
+    left: 20px;
+    transform: rotate(180deg);
+    opacity: 1;
+  }
+  10%{
+    top: 100px;
+    left: 20px;
+    transform: rotate(-50deg);
+    opacity: .5;
+  }
+  20%{
+    top: 30px;
+    left: 60px;
+    transform: rotate(190deg);
+    opacity: .8;
+  }
+  30%{
+    top: 50px;
+    left: 100px;
+    transform: rotate(0deg);
+    opacity: .4;
+  }
+  40%{
+    top: 58px;
+    left: 95px;
+    transform: rotate(-20deg);
+    opacity: .9;
+  }
+  50%{
+    top: 100px;
+    left: 3px;
+    transform: rotate(30deg);
+    opacity: 1;
+  }
+  60%{
+    top: 32px;
+    left: 40px;
+    transform: rotate(180deg);
+    opactiy: .1;
+  }
+  70%{
+    top: 40px;
+    left: 30px;
+    transform: rotate(30deg);
+    opacity: .4;
+  }
+  80%{
+    top: 30px;
+    left: 13px;
+    transform: rotate(45deg);
+    opacity: .7;
+  }
+  90%{
+    top: 45px;
+    left: 40px;
+    transform: rotate(-100deg);
+    opacity: .1;
+  }
+  100%{
+    top: 50px;
+    left: 50px;
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+ }
+
+ @keyframes floatLeia{
+  0% {
+    top: 0px;
+    left: 20px;
+    transform: rotate(150deg);
+    opacity: 1;
+  }
+  10%{
+    top: 100px;
+    left: 20px;
+    transform: rotate(-50deg);
+    opacity: .5;
+  }
+  20%{
+    top: 30px;
+    left: 60px;
+    transform: rotate(130deg);
+    opacity: .8;
+  }
+  30%{
+    top: 50px;
+    left: 100px;
+    transform: rotate(0deg);
+    opacity: .4;
+  }
+  40%{
+    top: 58px;
+    left: 95px;
+    transform: rotate(-20deg);
+    opacity: .9;
+  }
+  50%{
+    top: 100px;
+    left: 3px;
+    transform: rotate(30deg);
+    opacity: 1;
+  }
+  60%{
+    top: 32px;
+    left: 40px;
+    transform: rotate(180deg);
+    opactiy: .1;
+  }
+  70%{
+    top: 40px;
+    left: 30px;
+    transform: rotate(30deg);
+    opacity: .4;
+  }
+  80%{
+    top: 30px;
+    left: 13px;
+    transform: rotate(45deg);
+    opacity: .7;
+  }
+  90%{
+    top: 45px;
+    left: 40px;
+    transform: rotate(-100deg);
+    opacity: .1;
+  }
+  100%{
+    top: 50px;
+    left: 50px;
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+ }
+
+ @keyframes floatLuke{
+  0% {
+    top: 0px;
+    left: 20px;
+    transform: rotate(120deg);
+    opacity: 1;
+  }
+  10%{
+    top: 100px;
+    left: 20px;
+    transform: rotate(-50deg);
+    opacity: .5;
+  }
+  20%{
+    top: 30px;
+    left: 60px;
+    transform: rotate(190deg);
+    opacity: .8;
+  }
+  30%{
+    top: 50px;
+    left: 100px;
+    transform: rotate(0deg);
+    opacity: .4;
+  }
+  40%{
+    top: 58px;
+    left: 95px;
+    transform: rotate(-20deg);
+    opacity: .9;
+  }
+  50%{
+    top: 100px;
+    left: 3px;
+    transform: rotate(80deg);
+    opacity: 1;
+  }
+  60%{
+    top: 32px;
+    left: 40px;
+    transform: rotate(180deg);
+    opactiy: .1;
+  }
+  70%{
+    top: 40px;
+    left: 30px;
+    transform: rotate(30deg);
+    opacity: .4;
+  }
+  80%{
+    top: 30px;
+    left: 13px;
+    transform: rotate(45deg);
+    opacity: .7;
+  }
+  90%{
+    top: 45px;
+    left: 40px;
+    transform: rotate(-200deg);
+    opacity: .1;
+  }
+  100%{
+    top: 50px;
+    left: 50px;
+    transform: rotate(0deg);
+    opacity: 1;
+  }
+ }
+ 
 /* BUTTON STYLING */
 
 .button {
