updated page names

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/head.ejs') %>
 <%- include('../layout/css.ejs') %>
-<title>Document</title>
+<title>Star Wars Trivia</title>
 <link href="/styles/nav.css" type="text/css" rel="stylesheet" />
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
