--- a/views/pages/scores.ejs
+++ b/views/pages/scores.ejs
@@ -1,6 +1,6 @@
 <%- include('../layout/head.ejs') %>
 <%- include('../layout/css.ejs') %>
-<title>Document</title>
+<title>Scores</title>
 </head>
 
 <body>
