--- a/views/pages/board.ejs
+++ b/views/pages/board.ejs
@@ -9,6 +9,7 @@
 <body>
   <%- include('../layout/header.ejs') %>
 
+  <h1 class="main-header">Luke Strikes Back</h1>
 
   <div class="centerx">
     <div id="four_in_a_row_container">
@@ -18,7 +19,7 @@
     <div id="leaderboard">
       <img id="imageSlideInYoda" src="../img/yode_full_body.png" alt="Yoda" title="Yoda"></img>
       <p id="leaderboardMessage"></p>
-      <a href="/"><button id="goToLeaderboard">Home</button></a>
+      <a id="goHomeLink" href="/"><button id="goToLeaderboard">Home</button></a>
     </div>
 
 
