--- a/views/layout/username.ejs
+++ b/views/layout/username.ejs
@@ -1,6 +1,6 @@
 <div id="form_container">
   <h1 id="form_username">Please enter your username</h1>
-  <form id="form_input" action="/gamepage" method="POST">
+  <form id="form_input" action="/gamepage" method="GET">
     <fieldset>
       <legend id="form_legend"></legend>
       <input id="form_input" type="text" name="username" placeholder="enter username" required>
