--- a/views/pages/simon.ejs
+++ b/views/pages/simon.ejs
@@ -1,9 +1,8 @@
-
 <%- include('../layout/head.ejs') %>
 <%- include('../layout/css.ejs') %>
 <link href="styles/digital.css" type="text/css" rel="stylesheet" />
 <link href="styles/simon.css" type="text/css" rel="stylesheet" />
-<title>Document</title>
+<title>Leia Says</title>
 </head>
 
 <body>
