--- a/public/styles/modules.css
+++ b/public/styles/modules.css
@@ -22,6 +22,10 @@
   margin-top: 8em;
 }
 
+#yoda-trivia-option {
+  text-align: center;
+}
+
 #yoda-trivia-img {
   margin-top: 4em;
   float: left;
@@ -41,12 +45,12 @@
 
 
 #luke-trivia-option {
-  text-align: center;
-  margin-right: 9em;
+ text-align: center
 }
 
 #leia-trivia-option {
 margin-bottom: 50px;
+text-align: center
 }
 
 #trivia-header, #leia-header  {
