--- a/public/styles/timer.css
+++ b/public/styles/timer.css
@@ -33,10 +33,13 @@
 }
 
 .timer_blade_actual {
-  background-color: red;
+  background-color: green;
   border-top-right-radius: 10% 40%;
   border-bottom-right-radius: 10% 40%;
-  box-shadow: inset 0 0 0.25em red, 0 0 1em red, 0 0 1.5em red, 0 0 1em red;
+  box-shadow: inset 0 0 0.25em rgb(0, 255, 0), 
+  0 0 1em rgb(0, 255, 0), 
+  0 0 1.5em rgb(0, 255, 0), 
+  0 0 1em rgb(0, 255, 0);
   height: 40%;
   position: absolute;
   transition: width 1s;
