--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -18,12 +18,11 @@
 
     </div>
     <div class="about-us">
-      <img src="https://via.placeholder.com/250">
+      <img src="/img/Adrian-3.jpg">
       <h3 class="about-name">Adrian Huebner</h3>
-      <p>Lucas ipsum dolor sit amet mara darth qui-gon wedge skywalker solo kenobi hutt dooku endor. Moff mace ponda
-        baba.
-        Han hutt mustafar mandalore. Jabba jinn fett hutt r2-d2 dagobah bothan alderaan. Moff utapau utapau grievous
-        dantooine.</p>
+      <p>Adrian spent her time before Code Fellows working as a barista. She is pursing a career in Software Developer
+        because of her loving of learning difficult material. While Adrian isn’t at school, she is either practicing her
+        CSS skills or playing with her family’s new puppy.</p>
 
     </div>
     <div class="about-us">
