finished about us details

--- a/views/pages/aboutus.ejs
+++ b/views/pages/aboutus.ejs
@@ -9,12 +9,13 @@
   <h1 class="main-header">About Us</h1>
   <div id="all-about-us">
     <div class="about-us">
-      <img src="https://via.placeholder.com/250">
+      <img src="/img/photo-sarah-301.JPG">
+      >
       <h3 class="about-name">Sarah Gilliam</h3>
-      <p>Lucas ipsum dolor sit amet mara darth qui-gon wedge skywalker solo kenobi hutt dooku endor. Moff mace ponda
-        baba.
-        Han hutt mustafar mandalore. Jabba jinn fett hutt r2-d2 dagobah bothan alderaan. Moff utapau utapau grievous
-        dantooine.</p>
+      <p>Sarah fell in love with programming when she was a little kid making Lisa Frank-inspired websites (they were
+        the bomb.com!) She was working in the event industry and decided it wasn’t for her anymore. Cue Code Fellows!
+        Now she works hard at defeating the dark side, and using code to do it.</p>
+
 
     </div>
     <div class="about-us">
@@ -26,12 +27,12 @@
 
     </div>
     <div class="about-us">
-      <img src="https://via.placeholder.com/250">
+      <img src="/img/Jon-2-resized.jpg">
       <h3 class="about-name">Jon Veach</h3>
-      <p>Lucas ipsum dolor sit amet mara darth qui-gon wedge skywalker solo kenobi hutt dooku endor. Moff mace ponda
-        baba.
-        Han hutt mustafar mandalore. Jabba jinn fett hutt r2-d2 dagobah bothan alderaan. Moff utapau utapau grievous
-        dantooine.</p>
+      <p>Jon spent the last 9 years in the Navy as an IT and had traveled the world causing all kinds of shenanigans. He
+        is on the track to become a Professional Software Developer and continue to grow in the tech industry. Jon
+        enjoys spending his free time playing in the mud and climbing rocks - with his Jeep, of course, or just chilling
+        at home with his cat.</p>
 
     </div>
     <div class="about-us">
