read me updated

--- a/public/styles/board.css
+++ b/public/styles/board.css
@@ -27,7 +27,7 @@
 }
 
 #four_in_a_row_container .cellPlayer_0 {
-  background-image: url('/img/trooper.png');
+  background-image: url('/img/luke.png');
   background-size: 100% 100%;
 }
 
