--- a/views/pages/board.ejs
+++ b/views/pages/board.ejs
@@ -4,7 +4,7 @@
 
 <link href="styles/board.css" type="text/css" rel="stylesheet" />
 
-<title>Document</title>
+<title>Luke Strikes Back</title>
 
 <body>
   <%- include('../layout/header.ejs') %>
