--- a/views/pages/boardresult.ejs
+++ b/views/pages/boardresult.ejs
@@ -4,7 +4,7 @@
 
 <link href="styles/boardresult.css" type="text/css" rel="stylesheet" />
 
-<title>Document</title>
+<title>Luke Strikes Back</title>
 
 <body>
   <!-- < include('../layout/header.ejs') %> -->
